ISSUE #210 - Labels under right panel buttons, tooltips for left panel buttons, highlighting of issue buttons

--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -54,7 +54,7 @@ input#newProjectFileUploader(type="file")
 								ng-click="vm.uploadModel(project)"
 								ng-if="project.canUpload")
 								md-icon.angular-material-icons cloud_upload
-							md-button.md-icon-button(aria-label="Delete", ng-click="vm.setupDeleteProject(event, project)")
+							//md-button.md-icon-button(aria-label="Delete", ng-click="vm.setupDeleteProject(event, project)")
 								md-icon.angular-material-icons delete
 
 				md-divider
