--- a/frontend/rightPanel/css/rightPanel.css
+++ b/frontend/rightPanel/css/rightPanel.css
@@ -4,10 +4,21 @@ right-panel {
     right: 0;
 }
 
+right-panel #rightPanelButtons .rightPanelButtonGroup {
+    margin-bottom: 20px;
+}
+
 right-panel #rightPanelButtons .md-button {
-    margin-bottom: 15px;
+    margin-bottom: 2px;
 }
 
 right-panel #rightPanelButtons .fa {
     font-size: 24px;
+}
+
+right-panel #rightPanelButtons label {
+    color: #FFFFFF;
+    text-shadow: 0 0 2px rgba(0,0,0,0.5);
+    font-weight: bold;
+    font-size: 14px;
 }
