--- a/frontend/home/jade/home.jade
+++ b/frontend/home/jade/home.jade
@@ -14,4 +14,4 @@ div(ng-if="!vm.state.changing")
 		div(ng-if="vm.getLoggedInUrl()" ng-include="vm.getLoggedInUrl()")
 		div(ng-if="!vm.getLoggedInUrl()")
 			#homeLoggedIn
-			account-dir(account='vm.state.account', state='vm.state', ng-if="vm.goToAccount")
+			account-dir(account='vm.state.account', state='vm.state', ng-if="vm.goToAccount", show="vm.showAccount")
