--- a/frontend/account/jade/accountBilling.jade
+++ b/frontend/account/jade/accountBilling.jade
@@ -4,12 +4,12 @@
 			.md-toolbar-tools
 				h2 Billing
 
-		md-content(layout-margin)
-			h1.md-title Select your new subscription below
-			md-input-container
-				label Subscriptions
-				md-select(ng-model="vm.selectedSubscription")
-					md-option(
-					ng-repeat="(key, value) in vm.subscriptionTypes"
-					value="{{key}}"
-					) {{value.space}}GB, {{value.collaborators}} collaborators
+		.userContent
+			md-list
+				md-list-item.md-2-line
+					.md-list-item-text
+						h3 Current subscription
+						p 10Gb, 5 collaborators
+			md-divider
+			md-content(layout-margin)
+				md-button.md-raised.md-accent(ng-click="vm.upgrade()") Upgrade
