--- a/frontend/account/jade/accountInfo.jade
+++ b/frontend/account/jade/accountInfo.jade
@@ -14,8 +14,8 @@
 						div.md-list-item-text
 							h3 {{vm.firstName}} {{vm.lastName}}
 							p {{vm.email}}
-					md-divider
-					md-list-item.md-2-line(ng-repeat="(key, value) in vm.accountOptions", ng-click="vm.showItem(key)")
+						md-divider
+					md-list-item.md-2-line.accountInfoPage(ng-repeat="(key, value) in vm.accountOptions", ng-click="vm.showItem(key)")
 						div.md-list-item-text
 							h3 {{value.label}}
 						md-divider(ng-if="!$last")
