ISSUE #210 - Legal pages full screen, improved Docs styling

--- a/frontend/cookies/jade/cookies.jade
+++ b/frontend/cookies/jade/cookies.jade
@@ -1,10 +1,9 @@
-.homeUserContent(layout="row", layout-align="center", flex)
-	md-content.md-whiteframe-1dp(aria-label="Cookies", flex="50")
-		md-toolbar
-			.md-toolbar-tools
-				h2 Cookies
-				span(flex)
-				md-button.md-icon-button(aria-label="Home", ng-click="vm.home()")
-					md-icon.angular-material-icons home
-		.userContent(layout="column")
-			cookies-text
+md-toolbar
+	.md-toolbar-tools
+		h2 Cookies
+		span(flex)
+		img(src="/public/images/3drepo-logo-white.png")
+		span(flex)
+		md-button.md-icon-button(aria-label="Home", ng-click="vm.home()")
+			md-icon.angular-material-icons home
+cookies-text
