--- a/frontend/docs/jade/docs.jade
+++ b/frontend/docs/jade/docs.jade
@@ -1,7 +1,3 @@
-//.docList(layout="row", layout-align="start center", ng-repeat="doc in vm.docs", ng-click="vm.showDoc(doc)", ng-if="!vm.showDocsGetProgress")
-	md-icon(class="fa", md-font-icon="fa-file-pdf-o")
-	p {{doc.name}}
-
 md-list.typesList(ng-if="!vm.showInfo")
 	div(ng-repeat="(key, value) in vm.docs")
 		md-list-item.md-1-line(ng-click="vm.toggleItem(key)")
@@ -13,7 +9,7 @@ md-list.typesList(ng-if="!vm.showInfo")
 				.dataItem(ng-repeat="metadataItem in value.data", layout="column", flex)
 					div(ng-repeat="(mKey, mValue) in metadataItem.metadata", layout="row", layout-align="space-between start")
 						p.metadataKey(flex="50") {{mKey}}
-						p.metadataValue(flex="45") {{mValue}}
+						p.metadataValue(flex="45", ng-bind-html="mValue | linky:'_blank'") {{mValue}}
 
 			// PDF
 			div(ng-if="key==='PDF'")
