--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -80,7 +80,7 @@ body {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-	overflow-y: hidden;
+	overflow-y: auto;
 }
 
 .fill {
