--- a/frontend/privacy/jade/privacy.jade
+++ b/frontend/privacy/jade/privacy.jade
@@ -1,10 +1,9 @@
-.homeUserContent(layout="row", layout-align="center", flex)
-	md-content.md-whiteframe-1dp(aria-label="Privacy", flex="50")
-		md-toolbar
-			.md-toolbar-tools
-				h2 Privacy
-				span(flex)
-				md-button.md-icon-button(aria-label="Home", ng-click="vm.home()")
-					md-icon.angular-material-icons home
-		.userContent(layout="column")
-			privacy-text
+md-toolbar
+	.md-toolbar-tools
+		h2 Privacy
+		span(flex)
+		img(src="/public/images/3drepo-logo-white.png")
+		span(flex)
+		md-button.md-icon-button(aria-label="Home", ng-click="vm.home()")
+			md-icon.angular-material-icons home
+privacy-text
