--- a/frontend/termsAndConditions/jade/termsAndConditions.jade
+++ b/frontend/termsAndConditions/jade/termsAndConditions.jade
@@ -1,10 +1,9 @@
-.homeUserContent(layout="row", layout-align="center", flex)
-	md-content.md-whiteframe-1dp(aria-label="Terms and Conditions", flex="50")
-		md-toolbar
-			.md-toolbar-tools
-				h2 Terms and Conditions
-				span(flex)
-				md-button.md-icon-button(aria-label="Home", ng-click="vm.home()")
-					md-icon.angular-material-icons home
-		.userContent(layout="column")
-			terms-and-conditions-text
+md-toolbar
+	.md-toolbar-tools
+		h2 Terms and Conditions
+		span(flex)
+		img(src="/public/images/3drepo-logo-white.png")
+		span(flex)
+		md-button.md-icon-button(aria-label="Home", ng-click="vm.home()")
+			md-icon.angular-material-icons home
+terms-and-conditions-text
