ISSUE #210 - Put username on account, prettify Meta Data dates

--- a/frontend/account/jade/accountInfo.jade
+++ b/frontend/account/jade/accountInfo.jade
@@ -2,6 +2,7 @@
 	md-content.md-whiteframe-1dp(aria-label="Projects", flex)
 		md-toolbar
 			.md-toolbar-tools
+				h2 {{vm.username}}
 
 		div(layout="column")
 			div(layout="row", flex=)
