--- a/frontend/pricing/css/pricing.css
+++ b/frontend/pricing/css/pricing.css
@@ -28,14 +28,13 @@ pricing .pricingIcon#pricingAdvancedIcon {
 
 pricing .pricingPrice {
     height: 100px;
-    display: block;
 }
 pricing .pricingPriceTitle {
-    margin: 10px 0;
+    margin: 0;
     color: rgba(0,0,0,.6) !important;
 }
 pricing .pricingPriceSubtitle {
-    margin-top: -20px;
+    margin-top: -10px;
     color: rgba(0,0,0,.6) !important;
 }
 
