--- a/frontend/account/jade/accountProfile.jade
+++ b/frontend/account/jade/accountProfile.jade
@@ -5,45 +5,39 @@
 				h2 Profile
 				span(flex)
 
-		md-list.accountProfileList
+		.userContent
 			div(layout="column", flex)
-				md-list-item(ng-click="vm.toggleInfo()")
-					md-button.md-icon-button(aria-label="Folder")
-						md-icon.angular-material-icons person_outline
-					p Info
-				div(flex layout="row")
-					.accountProfileContent(ng-show="vm.showInfo", layout="column", flex="40")
-						md-input-container.md-block
-							label Username
-							input(ng-model="vm.username" ng-disabled="true")
-						md-input-container
-							label First name
-							input(ng-model="vm.firstName")
-						md-input-container.md-block
-							label Last name
-							input(ng-model="vm.lastName")
-						md-input-container.md-block
-							label Email
-							input(ng-model="vm.email", type="email")
-						.updateContainer(layout="row", layout-align="start center")
-							md-button.md-raised.md-accent(ng-click="vm.updateInfo()") Update
-							p {{vm.infoSaveInfo}}
+				h1.md-title Info
+				div(layout="row")
+					md-input-container
+						label Username
+						input(ng-model="vm.username" ng-disabled="true")
+				div(layout="row")
+					md-input-container
+						label First name
+						input(ng-model="vm.firstName")
+					md-input-container
+						label Last name
+						input(ng-model="vm.lastName")
+				div(layout="row", flex="50")
+					md-input-container
+						label Email
+						input(ng-model="vm.email", type="email")
+				.updateContainer(layout="row", layout-align="start center")
+					md-button.md-raised.md-accent(ng-click="vm.updateInfo()") Update
+					p {{vm.infoSaveInfo}}
 
 			md-divider
 
 			div(layout="column")
-				md-list-item(ng-click="vm.toggleChangePassword()")
-					md-button.md-icon-button(aria-label="Folder")
-						md-icon.angular-material-icons swap_vert
-					p Change Password
-				div(flex layout="row")
-					.accountProfileContent(ng-show="vm.showChangePassword", layout="column", flex="40")
-						md-input-container.md-block
-							label Old password
-							input(ng-model="vm.oldPassword", type="password")
-						md-input-container.md-block
-							label New password
-							input(ng-model="vm.newPassword", type="password")
-						.updateContainer(layout="row", layout-align="start center")
-							md-button.md-raised.md-accent(ng-click="vm.updatePassword()") Update
-							p {{vm.passwordSaveInfo}}
+				h1.md-title Password
+				div(layout="row")
+					md-input-container
+						label Old password
+						input(ng-model="vm.oldPassword", type="password")
+					md-input-container
+						label New password
+						input(ng-model="vm.newPassword", type="password")
+				.updateContainer(layout="row", layout-align="start center")
+					md-button.md-raised.md-accent(ng-click="vm.updatePassword()") Update
+					p {{vm.passwordSaveInfo}}
