--- a/frontend/home/css/home.css
+++ b/frontend/home/css/home.css
@@ -36,7 +36,7 @@ home .homeUserContent {
 home .homeUserContent .md-whiteframe-1dp,
 home .homeUserContent .md-whiteframe-8dp {
     border-radius: 4px;
-    background: #FFF;
+    background: rgb(250, 250, 250);;
 }
 
 home .homeUserContent md-toolbar {
