ISSUE #210 - More fixes for modified routing

--- a/frontend/project/jade/viewermanager.jade
+++ b/frontend/project/jade/viewermanager.jade
@@ -6,6 +6,9 @@ div(ng-repeat="(name, viewer) in vm.viewers")
 		project = "{{viewer.project}}"
 		branch = "{{viewer.branch}}"
 		revision = "{{viewer.revision}}"
+		up = "{{viewer.up}}"
+		at = "{{viewer.at}}"
+		view = "{{viewer.view}}"
 		manager = "vm.manager"
 		event-service = "vm.vmservice"
 		style="pointer-events:none"
