--- a/frontend/home/css/home.css
+++ b/frontend/home/css/home.css
@@ -108,6 +108,10 @@ home md-radio-button ._md-label {
 }
 
 /** Dialog ************************************************************************************************************/
+md-dialog {
+    background: rgb(250, 250, 250);
+}
+
 md-dialog md-toolbar {
     height: 40px;
     min-height: 40px;
