--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -48,7 +48,7 @@ input#newProjectFileUploader(type="file")
 								p.projectUploadInfo(ng-if="vm.showFileUploadInfo") {{vm.fileUploadInfo}}
 								md-progress-circular.projectUploadIcon(md-mode="indeterminate", md-diameter="15", ng-if="vm.showUploading")
 							p.projectTimestamp {{project.timestampPretty}}
-							md-button.md-accent.md-icon-button(
+							//md-button.md-accent.md-icon-button(
 								aria-label="Upload"
 								ng-click="vm.uploadModel(project)"
 								ng-if="project.canUpload")
@@ -56,11 +56,12 @@ input#newProjectFileUploader(type="file")
 							md-menu(md-position-mode="target-right target")
 								md-button.md-icon-button(aria-label="More", ng-click="$mdOpenMenu($event)")
 									md-icon.md-menu-origin.angular-material-icons(md-menu-origin) more_vert
-								md-menu-content(width="2")
+								md-menu-content(width="4")
 									md-menu-item(ng-repeat="(key, value) in vm.projectOptions")
 										md-button(ng-click="vm.doProjectOption($event, project, key)")
-											p
-											md-icon.angular-material-icons(md-menu-align-target) {{value}}
+											div(layout="row", flex)
+												p(flex) {{value.label}}
+												md-icon.angular-material-icons(md-menu-align-target) {{value.icon}}
 							//md-button.md-icon-button(aria-label="Delete", ng-click="vm.setupDeleteProject(event, project)")
 								md-icon.angular-material-icons delete
 
