--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -349,6 +349,15 @@ account-billing #accountBillingHistoryContainer {
 account-billing #accountBillingSave {
   margin: -20px 0 20px;
 }
+account-billing #accountBillingSave img {
+  height: 20px;
+  margin: 14px 0 0 5px;
+}
+
+/** Account Collaborators *********************************************************************************************/
+account-collaborators .collaboratorIcon {
+  margin: 0 10px !important;
+}
 
 /** Collaborator Dialog ***********************************************************************************************/
 #collaboratorDialog {
